[gd_scene load_steps=4 format=3 uid="uid://f764jjjlawae"]

[ext_resource type="Script" path="res://pottery/TimeAttackCompleteMenu.gd" id="1_4s6ge"]
[ext_resource type="Theme" uid="uid://bvc652bwjujtl" path="res://theme/main_ui.tres" id="2_75gck"]
[ext_resource type="Script" path="res://menu/CustomMenuButton.gd" id="3_kt1al"]

[node name="TimeAttackCompleteMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4s6ge")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = -1060.0
offset_top = -756.0
offset_right = 1098.0
offset_bottom = 781.0
color = Color(0, 0, 0, 0.67451)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -319.0
offset_top = -237.0
offset_right = 319.0
offset_bottom = 237.0
theme = ExtResource("2_75gck")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Completed piece"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="ScoreContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
columns = 3

[node name="CategoryPieceCount" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Fragments"

[node name="ValuePieceCount" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "5"
horizontal_alignment = 1

[node name="ScorePieceCount" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryItemCount" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Artifacts"

[node name="ValueItemCount" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "2"
horizontal_alignment = 1

[node name="ScoreItemCount" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryTime" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Time"

[node name="ValueTime" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "00:00:00  "
horizontal_alignment = 1

[node name="ScoreTime" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryComplete" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "complete"

[node name="ValueComplete" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100%"
horizontal_alignment = 1

[node name="ScoreComplete" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryAccuracy" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Disarray"

[node name="ValueAccuracy" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100%"
horizontal_alignment = 1

[node name="ScoreAccuracy" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryShatter" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Fracture"

[node name="ValueShatter" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "hairline"
horizontal_alignment = 1

[node name="ScoreShatter" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryBump" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Bump"

[node name="ValueBump" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Yes"
horizontal_alignment = 1

[node name="ScoreBump" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryRotate" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Rotate"

[node name="ValueRotate" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Yes"
horizontal_alignment = 1

[node name="ScoreRotate" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="CategoryTotal" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Total"

[node name="ValueTotal" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ScoreTotal" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Previous"
script = ExtResource("3_kt1al")

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Save"
script = ExtResource("3_kt1al")

[node name="NextButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Next"
script = ExtResource("3_kt1al")

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
